<resources>
    <string name="app_name">pictureReminder</string>
    <string name="plus">+</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="camera">Camera</string>
</resources>