<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeReminder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="315dp"
        android:layout_height="629dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:background="#fff"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Title"
            app:layout_constraintBottom_toTopOf="@+id/dateRe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dateRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/timeRe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameRe" />

        <EditText
            android:id="@+id/timeRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="195dp"
            android:ems="10"
            android:inputType="time"
            app:layout_constraintBottom_toTopOf="@+id/cancelBtnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateRe" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/photoBtnRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/border_violette"
            android:drawableLeft="@drawable/camera_icon"
            android:text="@string/camera"
            android:textColor="@android:color/holo_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeRe"
            app:layout_constraintVertical_bias="0.207" />

        <ImageView
            android:id="@+id/imageRe"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_marginStart="89dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="51dp"
            app:layout_constraintBottom_toTopOf="@+id/createBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.621"
            app:layout_constraintStart_toEndOf="@+id/photoBtnRe"
            app:layout_constraintTop_toBottomOf="@+id/timeRe"
            app:layout_constraintVertical_bias="0.586"
            app:srcCompat="@drawable/ic_launcher_background" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/border_create"
            android:text="@string/create"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelBtnAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtnAdd"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/border_cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/createBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_delete"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>